# Enrich using https://www.maturin.rs/metadata.html
[project]
name = "cdshealpix"
# 3.6 is no longer maintained and no more supported by maturin
requires-python = ">=3.7"
# https://numpy.org/neps/nep-0029-deprecation_policy.html
# https://docs.astropy.org/en/stable/changelog.html
dependencies = ["astropy"]
classifiers = [
    "Programming Language :: Rust",
]

[project.urls]
repository = "https://github.com/cds-astro/cds-healpix-python"

# Build a cdshealpix-x.x.x.tar.gz containing sources (from maturin).
[build-system]
requires = ["maturin>=0.13"]
build-backend = "maturin"

[tool.maturin]
# See https://github.com/PyO3/maturin#mixed-rustpython-projects
# "to avoid the  a common ImportError pitfall"
python-source = "python"
# Bindings type
bindings = "pyo3"
# Strip the library for minimum file size
strip = true
# Build artifacts with the specified Cargo profile
profile = "release"
# Cargo manifest path
# manifest-path = "Cargo.toml"
# Require Cargo.lock and cache are up to date
frozen = false
# Require Cargo.lock is up to date
locked = false

[tool.ruff]
fix = true
force-exclude = true
format = "grouped"
show-source = true
ignore-init-module-imports = true
target-version = "py37"
# Allow lines to be as long as 120 characters.
line-length = 120
extend-select = ["SIM", "FBT", "D", "UP", "N", "S", "B", "A", "C4", "EM", "ICN", "RET", "ARG", "PD", "PGH", "RUF"]
extend-ignore = ["E501", "D203"]
# E501: line length (done by black in our case)

[tool.ruff.per-file-ignores]
# D104: Missing docstring in public package
"__init__.py" = ["D104"]

[tool.ruff.flake8-errmsg]
max-string-length = 20

[tool.ruff.flake8-import-conventions]
# Declare the default aliases.
# seaborn = "sns"
# Declare a custom alias for the `matplotlib` module.
# "dask.dataframe" = "dd"

[tool.ruff.pydocstyle]
convention = "numpy"  # Accepts: "google", "numpy", or "pep257"

[tool.isort]
profile = "black"
known_astrolibraries=["astropy", "astropy_healpix"]
known_cdslibraries=["mocpy","cdshealpix"]
known_plotinglibraries=["matplotlib","seaborn"]
sections = ["FUTURE","STDLIB","ASTROLIBRARIES","CDSLIBRARIES","PLOTINGLIBRARIES","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
import_heading_stdlib="Standard Library"
import_heading_firstparty="Local imports"
import_heading_astrolibraries="Astropy tools"
import_heading_cdslibraries="Moc and HEALPix tools"
import_heading_plotinglibraries="For plots"