[project]
name = "python-project-template"
readme = "README.md"
# 3.6 is no longer maintained
requires-python = ">=3.7"
classifiers = ["Programming Language :: Python :: 3",
               "Operating System :: OS Independent",
              ]

[project.urls]
repository = "https://github.com/ManonMarchand/python-project-template"

[tool.poetry]
name = "python-project-template"
version = "0.0.1"
description = "A template for future python projects"
authors = ["Manon Marchand <manon.marchand@bubbly.space>"]
readme = "README.md"
packages = [{include = "python_project_template"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.260"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true
force-exclude = true
format = "grouped"
show-source = true
ignore-init-module-imports = true
target-version = "py37"
# Allow lines to be as long as 120 characters.
line-length = 120
extend-select = ["SIM", "FBT", "D", "UP", "N", "S", "B", "A", "C4", "EM", "ICN", "RET", "ARG", "PD", "PGH", "RUF"]
# E501: line length (done by black in our case)

[tool.ruff.per-file-ignores]
# D104: Missing docstring in public package
"__init__.py" = ["D104"]

[tool.ruff.flake8-errmsg]
max-string-length = 20

[tool.ruff.flake8-import-conventions]
# Declare the default aliases.
# seaborn = "sns"
# Declare a custom alias for the `matplotlib` module.
# "dask.dataframe" = "dd"

[tool.ruff.pydocstyle]
convention = "numpy"  # Accepts: "google", "numpy", or "pep257"

[tool.isort]
profile = "black"
known_plotinglibraries=["matplotlib","seaborn"]
sections = ["FUTURE","STDLIB", "PLOTINGLIBRARIES","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
import_heading_stdlib="Standard Library"
import_heading_firstparty="Local imports"
import_heading_plotinglibraries="For plots"
